--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ hyper = "0.13.3"
 tokio = { version = "0.2.13", features = ["full"] }
 hyper-tls = "0.4.1"
 serde_json = "1.0.48"
+async-std = "1.5.0"
+futures = "0.3.4"
