--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ hyper-tls = "0.4.1"
 serde_json = "1.0.48"
 async-std = "1.5.0"
 futures = "0.3.4"
+
+[dependencies.serde]
+version = "1.0.104"
+default-features = false
+features = ["derive"]
