--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ edition = "2018"
 [dependencies]
 hyper = "0.13.3"
 tokio = { version = "0.2.13", features = ["full"] }
-hyper-tls = "0.4.1"
 serde_json = "1.0.48"
 async-std = "1.5.0"
 futures = "0.3.4"
-h2 = "0.2.2"
-tokio-tls = "0.3.0"
-native-tls = "0.2.4"
+hyper-alpn = "0.2.1"
+bytes = "0.5.4"
+http = "0.2.0"
 
 [dependencies.serde]
 version = "1.0.104"
